[tool.poetry]
name = "lecture2gether_flask"
version = "0.1.0"
description = "Flask backend for the lecture2gether service"
authors = ["Florian <florian@flova.de>"]
license = "MIT"

packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = ">=3.7.*"
flask = "^1.1.2"
flask-restful = "^0.3.8"
pyOpenSSL = "^19.1.0"
requests = "^2.23.0"
flask-socketio = "^4.3.0"
gevent = "^20.5.2"
gevent-websocket = "^0.10.1"
flask-cors = "^3.0.8"
redis = "^3.4.1"
coolname = "^1.1.0"
flask_prometheus_metrics = "^1.0.0"
prometheus_flask_exporter = "^0.13.0"
prometheus_client = "^0.8.0"
BeautifulSoup4 = "^4.9.1"
google-api-python-client = "^1.9.1"
oauth2client = "^4.1.3"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
